--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "concourse.ts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "biome check --write ./src",
-    "format": "biome format --write ./src"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "^22.14.0",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "zod": "^3.24.2"
-  }
+	"name": "concourse.ts",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "biome check --write ./src",
+		"format": "biome format --write ./src ./docs",
+		"prepare": "husky",
+		"check": "biome check ./src ./docs"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@types/node": "^22.14.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.5.1",
+		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"zod": "^3.24.2"
+	},
+	"lint-staged": {
+		"**/*.{js,ts,jsx,tsx,json}": [
+			"biome check --apply --no-errors-on-unmatched",
+			"biome format --write --no-errors-on-unmatched"
+		]
+	}
 }
