--- a/package.json
+++ b/package.json
@@ -1,93 +1,80 @@
 {
-  "name": "@infrablocks/concourse",
-  "version": "0.28.0-pre.11",
-  "description": "A JavaScript SDK for the Concourse CI API.",
-  "main": "./commonjs/index.js",
-  "types": "./commonjs/index.d.ts",
-  "exports": {
-    "import": "./src/index.js",
-    "require": "./commonjs/index.js"
-  },
-  "scripts": {
-    "lint": "standard --env mocha",
-    "lintFix": "standard --env mocha --fix",
-    "start": "tsc --watch",
-    "build": "tsc",
-    "prebuild": "rm -rf commonjs",
-    "prepublishOnly": "npm run lint && npm run test && npm run build",
-    "version:bump:pre": "npm version prerelease --preid=pre",
-    "version:bump:minor": "npm version minor",
-    "version:bump:next": "npm version preminor --preid=pre",
-    "test": "mocha --recursive --timeout 30000 ./test",
-    "integration": "mocha --recursive --timeout 30000 ./integration"
-  },
-  "type": "module",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/infrablocks/concourse.js.git"
-  },
-  "keywords": [
-    "concourse",
-    "ci",
-    "javascript",
-    "sdk"
-  ],
-  "author": "Toby Clemson",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/infrablocks/concourse.js/issues"
-  },
-  "homepage": "https://github.com/infrablocks/concourse.js#readme",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
-  },
-  "files": [
-    "LICENSE.txt",
-    "README.md",
-    "ROUTES.md",
-    "src",
-    "commonjs",
-    "test",
-    "integration"
-  ],
-  "standard": {
-    "globals": [
-      "describe",
-      "it"
-    ]
-  },
-  "dependencies": {
-    "await-lock": "^3.0.0",
-    "axios": "^1.5.1",
-    "camelcase-keys-deep": "^0.1.0",
-    "form-urlencoded": "^6.1.4",
-    "joi": "^17.11.0",
-    "js-base64": "^3.7.5",
-    "jsonwebtoken": "^9.0.2",
-    "ramda": "^0.30.1",
-    "semver": "^7.5.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "@faker-js/faker": "^8.2.0",
-    "@types/camelcase-keys-deep": "^0.1.2",
-    "@types/form-urlencoded": "^4.4.2",
-    "@types/js-base64": "^3.3.1",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.14.1",
-    "@types/ramda": "^0.30.2",
-    "@types/semver": "^7.7.0",
-    "axios-mock-adapter": "^1.22.0",
-    "chai": "^5.0.0",
-    "hosted-git-info": "^8.0.0",
-    "lodash": "^4.17.21",
-    "minimist": "^1.2.8",
-    "mocha": "^11.0.1",
-    "node-rsa": "^1.1.1",
-    "sinon": "^20.0.0",
-    "standard": "^17.1.0",
-    "typescript": "^5.8.3"
-  }
+	"name": "@infrablocks/concourse",
+	"version": "0.28.0-pre.11",
+	"description": "A JavaScript SDK for the Concourse CI API.",
+	"main": "./commonjs/index.js",
+	"types": "./commonjs/index.d.ts",
+	"exports": {
+		"import": "./commonjs/index.js",
+		"require": "./commonjs/index.js"
+	},
+	"scripts": {
+		"check": "biome check --write .",
+		"start": "tsc --watch",
+		"build": "tsc",
+		"prebuild": "rm -rf commonjs",
+		"prepublishOnly": "npm run check && npm run test && npm run build",
+		"version:bump:pre": "npm version prerelease --preid=pre",
+		"version:bump:minor": "npm version minor",
+		"version:bump:next": "npm version preminor --preid=pre",
+		"test": "npm run build && mocha --recursive --timeout 30000 --exclude test/Fly.spec.js ./test",
+		"integration": "npm run build && NODE_PATH=./commonjs mocha --recursive --timeout 30000 ./integration",
+		"prepare": "husky"
+	},
+	"type": "module",
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/infrablocks/concourse.js.git"
+	},
+	"keywords": ["concourse", "ci", "javascript", "sdk"],
+	"author": "Toby Clemson",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/infrablocks/concourse.js/issues"
+	},
+	"homepage": "https://github.com/infrablocks/concourse.js#readme",
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org"
+	},
+	"files": [
+		"LICENSE.txt",
+		"README.md",
+		"ROUTES.md",
+		"src",
+		"commonjs",
+		"test",
+		"integration"
+	],
+	"standard": {
+		"globals": ["describe", "it"]
+	},
+	"dependencies": {
+		"await-lock": "^3.0.0",
+		"axios": "^1.5.1",
+		"camelcase-keys-deep": "^0.1.0",
+		"form-urlencoded": "^6.1.4",
+		"js-base64": "^3.7.5",
+		"jsonwebtoken": "^9.0.2",
+		"ramda": "^0.30.1",
+		"semver": "^7.5.4"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@faker-js/faker": "^8.2.0",
+		"@types/camelcase-keys-deep": "^0.1.2",
+		"@types/form-urlencoded": "^4.4.2",
+		"@types/js-base64": "^3.3.1",
+		"@types/jsonwebtoken": "^9.0.9",
+		"@types/node": "^22.14.1",
+		"@types/ramda": "^0.30.2",
+		"@types/semver": "^7.7.0",
+		"axios-mock-adapter": "^1.22.0",
+		"chai": "^5.0.0",
+		"husky": "^9.1.7",
+		"mocha": "^11.0.1",
+		"node-rsa": "^1.1.1",
+		"sinon": "^20.0.0",
+		"sinon-chai": "^4.0.0",
+		"typescript": "^5.8.3"
+	}
 }
