--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"types": "./dist/index.d.ts",
 	"scripts": {
 		"build": "tsc && node ./scripts/build.mjs",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "vitest run",
 		"lint": "biome check --write ./src",
 		"format": "biome format --write ./src ./docs",
 		"prepare": "husky",
@@ -21,7 +21,8 @@
 		"@types/node": "^22.14.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^15.5.1",
-		"typescript": "^5.8.3"
+		"typescript": "^5.8.3",
+		"vitest": "^2.0.5"
 	},
 	"dependencies": {
 		"zod": "^3.24.2"
